tests/fixtures/invalid/pow_int_set_none.py
# Cannot call pow() with Int, Set[int], None
x = pow(1, {1, 2, 3}, None)
